@@ -69,5 +69,13 @@ echo "If you get an unexpected failure when using one of the Prolog integration"
 echo "scripts, consult see the \"/usr/share/logtalk/configs/NOTES.txt\" file"
 echo "for compatibility notes."
 echo
+if [ -x /usr/bin/update-mime-database ]; then
+	mkdir -p /usr/share/mime/packages
+	cd /usr/share/mime/packages
+	cp /usr/share/lgt2375/scripts/freedesktop/logtalk.xml /usr/share/mime/packages/logtalk.xml
+	update-mime-database /usr/share/mime
+	echo "Added the Logtalk mime-type to the Shared MIME-info Database."
+	echo
+fi
 echo "Logtalk basic installation completed."
 echo
