@@ -1,0 +1,15 @@
+================================================================
+Logtalk - Open source object-oriented logic programming language
+Release 2.37.5
+
+Copyright (c) 1998-2009 Paulo Moura.        All Rights Reserved.
+Logtalk is free software.  You can redistribute it and/or modify
+it under the terms of the "Artistic License 2.0" as published by 
+The Perl Foundation. Consult the "LICENSE.txt" file for details.
+================================================================
+
+
+This directory contains a XML file, logtalk.xml, defining the Logtalk
+mime-type for the freedesktop.org shared mime-info database:
+
+http://standards.freedesktop.org/shared-mime-info-spec/shared-mime-info-spec-latest.html
